--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -681,3 +681,14 @@ note={Accessed: 2016-11-20}
   url = "http://www.scipy.org/",
   note = {[Online; accessed 2017-03-16]}
 }
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
