--- a/thesis/foundations.ltx
+++ b/thesis/foundations.ltx
@@ -248,7 +248,7 @@ Neural embeddings however seem to implicitly capture only relevant features \cit
 % Problem statement 
 \subsection{Problem statement}\label{section:problem statement}
 The task of this thesis is the classification of orphan classes in Wikidata. In other words a function is needed, 
-which given an orphan class $u$ of a taxonomy $T = (C, S)$ with a root class $root_T$, find an appropriate superclass for $T$.
+which given an orphan class $u$ of a taxonomy $T = (C, S)$ with a root class $root_T$, find an appropriate superclass for $u$.
 
 \fullcite{Doan2002} suggests that for the task of placing a class into an appropriate position in $T$,
 either finding the most similar class, most specific superclass, or most general subclasses of $u$, are sensible approaches.
@@ -258,7 +258,7 @@ $\mathit{sim}_\mathit{msp}(a, b)$ is $0$, if $b$ is not a superclass of $a$.
 The problem is defined as follows:
 \begin{definition}[Problem definition]\label{problem definition}
 Given a taxonomy $T = (C, S)$ with root class $root_T$ and a similarity function $sim$ over $T$,
-find a function $f: \mathbb{N} \mapsto \mathcal{P}(\mathbb{N})$, 
+find a function $f: C \mapsto C$, 
 which, given an orphan class $u \in C$, returns a class $s = f(u)$, 
 fulfilling the following criteria:
 \begin{align}
