Changed GraphWalkSentences to in-memory approach. Added number of triple sentences to evaluation.ltx

--- a/thesis/evaluation.ltx
+++ b/thesis/evaluation.ltx
@@ -75,8 +75,7 @@ Plots:
 \end{itemize}
 
 \subsection{About the dataset}
-Triple sentences generated $72,386,886$ sentences.
-
+Triple sentences generated $112,904,736$ sentences, of which $66,258,922$ are triples.
 
 \subsection{Results}
 Different hybrid algorithms were executed based on the components proposed in Chapter~\ref{section:algorithm}.
